--- a/Assignment MSB104.Rmd
+++ b/Assignment MSB104.Rmd
@@ -2,9 +2,10 @@
 title: "Econometrics assignment"
 author: "Heidi Marie Rolfsnes and Ann Elisabeth Jacobsen"
 output:
-  html_document: default
+  word_document: default
   pdf_document: default
-
+  html_document: default
+bibliography: references.bib
 ---
 
 ```{r Packages}
@@ -56,12 +57,6 @@ gdppop <- BNP %>%
   left_join(Pop, by = c("Region", "Year"))
 ```
 
-```{r}
-#| echo = FALSE
-gdppop %>%
-  vtable::st()
-```
-
 ## GDP per Capita 
 
 To calculate GDP per capita, we took GDP and divided it by the population. And then we have multiplied by one million, so that it is represented correctly in Euros.
@@ -78,21 +73,12 @@ na.omit()
 Briefly about what we found in the summary. We found the min and the max values. i.e. the smallest and the highest GDP per capita for the country. We also found 1st quartile and 3rd quartile. The first quartile was the observation between the median and the lowest value, and looks at the 25% lowest values from the 75% highest. The median looks at the value that is observed the most times in the middle of the observations. The third quartile is then, naturally enough, the value between the median and the highest value.We have also look at mean which told us what the average observation for all regions was.
 
 And then we further look at GDP, population and GDP per capita in our five countries and what results it gives us when we calculate all the NUTS3 regions together.
-```{r}
-#| echo = FALSE
-gdppop %>%
-filter(unit == "MIO_EUR" & (grepl('DK..', Region) | grepl('FR..', Region) | grepl('HU..', Region)| grepl('PT..', Region) | grepl('SK..', Region))) %>% 	summarise( GDP_per_Capita = mean(gdp_per_capita)) 
-```
+
+LINK TIL TABLE 2
 
 From the summary we can see that GDP per capita at NUTS3 level for all our countries was 22 438,88 Euro. Since we don't have any other values to compare with we can't say to much about it, because it doesn´t give us to much information. We will therefor look at the nuts3 regions for each country. 
 
-
-```{r}
-#| echo = FALSE
-summary(gdppop)
-```
-
-It wasn't easy to draw any conclusion from the summary above. We can see that there is a difference in GDP as the lowest value is 683,7 while the highest is 251 623,6. We can also see that the maximum value is high compared to the other values, as the 3rd quartile is only 18 416,7. Population and gdp_ per_capita gave us the same results, with a very low minimum and a high maximum value. 
+It wasn't easy to draw any conclusion from the summary in table 2. We can see that there is a difference in GDP as the lowest value is 683,7 while the highest is 251 623,6. We can also see that the maximum value is high compared to the other values, as the 3rd quartile is only 18 416,7. Population and gdp_ per_capita gave us the same results, with a very low minimum and a high maximum value. 
 
 To get a better picture of the different countries and the opportunity to see if there are regions that stand out. We make summaries per country, because then we have the opportunity to exclude regions that stand out in futher assignments. We will also look at a spesific year for all the country to compare results with.
 
@@ -103,40 +89,15 @@ Since Hungary and Slovakia have few nuts3 regions we chose to look at them toget
 
 ### Denmark
   
-```{r GDP in Denmark}
-#| echo = FALSE
-gdppop%>%
-     filter(grepl("DK...", Region)) %>%
-     select(Year, gdp_per_capita, Region) %>%
-     ggplot(aes(x = Year, y= gdp_per_capita, fill= Region, color= Region)) +
-     geom_point(lwd = .8) +
-   labs(title = 'GDP per capita in Denmark', x = "Year", y = "GDP Per capita") 
-```
+
 Denmark is a small country in Scandinavia,and they don't have many NUTS3 regions. Kobenhagen is the capital of Denmark, and as we can see above it stand out together with the surrounding region. we can se that the region around the capital has had a higher growth. Capital cities are often richer than other regions. we can see that in Denmark as well. 
 
 To get an overview, we have chosen to look at 2010 for all the regions in Denmark to see which regions are the richest and least wealties.
 
 The whealtiest regions in Denmark
-```{r the whealtiest regions in Denmark}
-#| echo = FALSE
-gdpdk <- gdppop%>%
-  filter(grepl("DK...", Region)) %>%
-  filter(Year==2010) %>%
-  select(Year, Region, gdp_per_capita)
-slice_max(gdpdk, gdp_per_capita, n=3)
-```
-The poorest regions in Denmark
-```{r The poorest regions in Denmark}
-#| echo = FALSE
-slice_min(gdpdk, gdp_per_capita, n=3)
 
-```
 
-```{r}
-#| echo = FALSE
-gdpdk %>%
-summary()
-```
+
 The three Whealties regions in Denmark are Kobenhagen (DK011), Kobenhagen area (DK012) and Sydjylland (DK032).
 The three least wealtiest regions in Denmark are Vest- og Sydjælland (DK022), Bornholm (DK014) and Østsjælland (DK021).
 
@@ -144,103 +105,23 @@ Denmark has 11 nuts3 regions, it is the capital and the surrounding region that 
 
 ### France
 
-```{r GDP in France}
-#| echo = FALSE
-gdppop%>%
-     filter(grepl("FR...", Region)) %>%
-     select(Year, gdp_per_capita, Region) %>%
-     ggplot(aes(x = Year, y= gdp_per_capita, fill= Region, color= Region)) +
-     geom_point(lwd = .8) +
-   labs(title = 'GDP per capita in France', x = "Year", y = "GDP Per capita")
-```
-
-```{r}
-#| echo = FALSE
-gdppop%>%
-  filter(grepl("FR...", Region)) %>%
-  select(Population, gdp_per_capita) %>%
-  summary()
-```
 France is a country in Western Europe, they also have colonies in other parts of the world. France has the largest land areas in the EU, which we see in the fact that they have over a hundred nuts3 regions.
 
 Since France has so many nuts3 regions, it is not so easy to distinguish the different regions. We see that here too the capital Paris stands out. When we made a summary, we see that there is a difference in min and max. When we look more closely at the numbers, we can see that this may be due to France having colonies in other countries that are included. These colonies are located in Africa and South America which has a negative effect on France's overall GDP. For further research, we have chosen to remove these regions from the data set.
 
-```{r Take away the FRY regions}
-#| echo = FALSE
-gdppop <- gdppop %>%
-  filter(Region != 'FRY10') %>%
-   filter(Region != 'FRY20') %>%
-   filter(Region != 'FRY30') %>%
-   filter(Region != 'FRY40') %>%
-   filter(Region != 'FRY50') 
-```
 
-```{r France without the FRY regions}
-#| echo = FALSE
-gdppop%>%
-     filter(grepl("FR...", Region)) %>%
-     select(Year, gdp_per_capita, Region) %>%
-     ggplot(aes(x = Year, y= gdp_per_capita, fill= Region, color= Region)) +
-     geom_point(lwd = .8) +
-   labs(title = 'GDP per capita in France', x = "Year", y = "GDP Per capita")
-```
 The whealtiest regions in France
-```{r The whealtiest regions in France}
-#| echo = FALSE
-gdpfr <- gdppop %>%
-  filter(grepl("FR...", Region)) %>%
-  filter(Year==2010) %>%
-  select(Year, Region, gdp_per_capita)
-slice_max(gdpfr, gdp_per_capita, n=3)
-```
-
-The poorest regions in France
-```{r The poorest regions in France}
-#| echo = FALSE
-slice_min(gdpfr, gdp_per_capita, n=3)
-```
-
-```{r}
-#| echo = FALSE
-summary(gdpfr)
-```
 
 France now have 96 nuts3 regions. The three wealtiest regions are Paris (FR101), Hauts-de-seine (FR105) and Rhône (FRK26). Paris og Hauts-de-seine stands out clarly from the other region with a difference of approximately 50,000 Euro GDP pr capita.
 The three poorest regions Creuse (FRI22), Ariège (FRJ21) and  Meuse(FRF32). These regions have quite the same GDP pr capita. 
 
 ### Hungary and Slovakia
 
-```{r GDP in Hungary and Slovakia}
-#| echo = FALSE
-gdppop %>%
-     filter (grepl('HU..', Region) | grepl('SK..', Region)) %>%
-     select(Year, gdp_per_capita, Region) %>%
-     ggplot(aes(x = Year, y= gdp_per_capita, fill= Region, color= Region)) +
-     geom_point(lwd = .8) +
-   labs(title = 'GDP per capita in Hungary and Slovakia ', x = "Year", y = "GDP Per capita")
-```
+
 Hungary and Slovakia are both countries in Central Europe, here we see that the capitals Bratislava and Budapest both had great growth until 2008. Then Budabest went down a little while Bratislava had a larger increase. the rest of the regions have had an more steady growth.
 
 The whealtiest regions in Hungary and Slovakia
-```{r The whealtiest regions in Hungary and Slovakia}
-#| echo = FALSE
-gdphusk <- gdppop%>%
-filter(grepl('HU..', Region) | grepl('SK..', Region)) %>%
-  filter(Year==2010) %>%
-  select(Year, Region, gdp_per_capita)
-slice_max(gdphusk, gdp_per_capita, n=3)
-```
-The poorest regions in Hungary and Slovakia
-```{r The poorest regions in Hungary and Slovakia}
-#| echo = FALSE
-slice_min(gdphusk, gdp_per_capita, n=3)
-```
 
-```{r}
-#| echo = FALSE
-gdphusk %>%
-summary()
-```
 
 Hungary and Slovakia has 28 regions together. The tre whelties are Bratislava (SK010), Budapest (HU110) and Trnava (SK021). The capitals of both countries have the richest region. The least wheltiest regions are Nògràd(HU313), Szabolcs-Szatmàr-Bereg(HU323). We can see that the three poorest regions belong to Hungary. which means that they have a lower GDP per capita than Slovakia in the poorest regions. We see that there is a difference between min and max in the regions of Hungary. 
 
@@ -248,39 +129,11 @@ There is a difference of approximately 25,000 Euro between the whelties and poor
 
 ### Portugal
 
-```{r GDP in Portugal}
-#| echo = FALSE
-gdppop%>%
-     filter(grepl("PT...", Region)) %>%
-     select(Year, gdp_per_capita, Region) %>%
-     ggplot(aes(x = Year, y= gdp_per_capita, fill= Region, color= Region)) +
-     geom_point(lwd = .8) +
-   labs(title = 'GDP per capita in Portugal', x = "Year", y = "GDP Per capita") 
-```
-
 Portugal is a country in southern Europe. Portugal also has two archipelagos, each representing a different region.
 We see steady growth in all the regions, all have had a slight decline between 2010-2012, after that there has been an increase. We also see that in Portugal the capital Lisbon stands out as the richest region.
 
 The whealtiest regions in Portugal
-```{r the whealtiest regions in Portugal}
-#| echo = FALSE
-gdppt <- gdppop%>%
-  filter(grepl("PT...", Region)) %>%
-  filter(Year==2010) %>%
-  select(Region, gdp_per_capita)
-slice_max(gdppt, gdp_per_capita, n=3)
-```
-The poorest regions in Portugal
-```{r The poorest regions in Portugal}
-#| echo = FALSE
-slice_min(gdppt, gdp_per_capita, n=3)
-```
 
-```{r}
-#| echo = FALSE
-gdppt %>%
-summary()
-```
 
 Portugal has 25 regions. The wheltiest are Lisboa(PT170), Alentejo Litoral (PT181) and Algarve (PT150). We can se that Lisboa has a litle higher GDP pr capita then the rest of the wheltiest regions. The poorest regions are Tãmega e Sousa (PT11C), Alto Tãmega (PT11B) and Beiras e Serra da Estrela (PT16J). There is approximatly 14,000 Euro in GDP per capita, in difference between the wealties and the poorest regions.     
 
@@ -324,33 +177,7 @@ st()
 First, we look at all the regions in the selected countries. We have 46 observations. The total Gini for all countries for all years is 0.28. This Gini is for all 5 countries over the last 20 years. We think that it will be a bit "washed away" and will therefore look at each individual country. 
 We can also see that we have ginis that are 0 which means a perfect correlation. We will look at each country to find out why and where there are regions that have ginis that are 0. To look more specifically at the countries, we have chosen to only look at the year 2010.
 
-```{r NUTS2 in Denmark}
-#| echo = FALSE
-gdppop %>%
-filter(nuts0 == "DK") %>%
-distinct(nuts2, Year,.keep_all =TRUE) %>%
-ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
-  geom_line(lwd = .8) +
-   labs(title = 'Nuts 2 - Gini in Denmark', x = "Year", y = "Gini")
-```
 
-```{r}
-#| echo = FALSE
-gdppop %>%
-filter(nuts0 == "DK") %>%
-select(Year,nuts2, gini_n2) %>%
-distinct(nuts2, Year,.keep_all =TRUE) %>%
-  filter(Year==2010)
-```
-Outliers in Denmark
-```{r Outliers in Denmark}
-#| echo = FALSE
-dkoutliers <- gdppop %>%
-  filter(nuts0 == "DK") %>%
-  filter(gini_n2==0) %>%
-  distinct(nuts2)
-dkoutliers
-```
 
 In the graph above, you can see that there are two regions that have varied quite a bit over the past 20 years. They still stay below 0.025, which shows that there is little difference between rich and poor in these regions. Another region that stands out is DK01. It is a bit further up the graph than the other regions. Although it is not close to 0, there is a greater difference between rich and poor here than in the other regions.
 
@@ -358,35 +185,7 @@ In Denmark, the Gini coefficients are between 0 and 0,11. Denmark has a region N
 
 ### France
 
-```{r NUTS2 in France}
-#| echo = FALSE
-gdppop %>%
-filter(nuts0 == "FR") %>%
-distinct(nuts2, Year,.keep_all =TRUE) %>%
-ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
-  geom_line(lwd = .8) +
-   labs(title = 'Nuts 2 - Gini in France', x = "Year", y = "Gini") 
 
-```
-
-```{r}
-#| echo = FALSE
-gdppop %>%
-filter(nuts0 == "FR") %>%
-select(Year,nuts2, gini_n2) %>%
-distinct(nuts2, Year,.keep_all =TRUE) %>%
-  filter(Year==2010)
-```
-
-Outliers in France
-```{r Outliers in France}
-#| echo = FALSE
-froutliers <- gdppop %>%
-  filter(nuts0 == "FR") %>%
-  filter(gini_n2==0) %>%
-  distinct(nuts2)
-froutliers
-```
 
 In France, there are so many regions that it is difficult to see the regions properly in the graph above. What is shown well is that the vast majority of regions follow each other evenly by being below 0.1. There are still some that stand out and we can see that FR10 is the highest with a gini of 0.3, while FRJ1 and FRK1 fluctuate quite a bit from 2005 to 2020
 
@@ -394,45 +193,6 @@ In France, the Gini coefficients are between 0,02 and 0,26, which shows us that 
 
 
 ### Hungary and Slovakia
-
-
-```{r NUTS2 in Hungary and Slovakia}
-#| echo = FALSE
-gdppop %>%
-filter(grepl('HU..', Region) | grepl('SK..', Region)) %>%
-distinct(nuts2, Year,.keep_all =TRUE) %>%
-ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
-  geom_line(lwd = .8) +
-   labs(title = 'Nuts 2 - Gini in Hungary and Slovakia', x = "Year", y = "Gini")
-
-```
-
-```{r}
-#| echo = FALSE
-gdppop %>%
-filter(nuts0 == "HU") %>%
-select(Year,nuts2, gini_n2) %>%
-distinct(nuts2, Year,.keep_all =TRUE) %>%
-  filter(Year==2010)
-```
-
-```{r}
-#| echo = FALSE
-gdppop %>%
-filter(nuts0 == "SK") %>%
-select(Year,nuts2, gini_n2) %>%
-distinct(nuts2, Year,.keep_all =TRUE) %>%
-  filter(Year==2010)
-```
-Outliers in Hungary and Slovakia
-```{r Outliers in Hungary and Slovakia}
-#| echo = FALSE
-huskoutliers <- gdppop %>%
-   filter (grepl('HU..', Region) | grepl('SK..', Region)) %>%
-  filter(gini_n2==0) %>%
-  distinct(nuts2)
-huskoutliers
-```
 
 Hungary and Slovakia have large fluctuations in their regions. One of the regions with the most fluctuations is HU22 where we can see that they are down to a gini of 0.075 in 2012, while in 2016 they are up to a gini of approximately 0.12. Hungary and Slovakia are small countries in Eastern Europe and we assume that this is the reason why there are large fluctuations.
 
@@ -442,34 +202,6 @@ In Slovakia,the Gini coefficient are also between 0 and 0,08. Slovakia has on re
 
 ### Portugal
 
-```{r NUTS2 in Portugal}
-#| echo = FALSE
-gdppop %>%
-filter(nuts0 == "PT") %>%
-distinct(nuts2, Year,.keep_all =TRUE) %>%
-ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
-  geom_line(lwd = .8) +
-   labs(title = 'Nuts 2 - Gini in Portugal', x = "Year", y = "Gini")
-
-```
-
-```{r}
-#| echo = FALSE
-gdppop %>%
-filter(nuts0 == "PT") %>%
-select(Year,nuts2, gini_n2) %>%
-distinct(nuts2, Year,.keep_all =TRUE) %>%
-  filter(Year==2010)
-```
-Outliers in Portugal
-```{r Outliers in Portugal}
-#| echo = FALSE
-ptoutliers <- gdppop %>%
-  filter(nuts0 == "PT") %>%
-  filter(gini_n2==0) %>%
-  distinct(nuts2)
-ptoutliers
-```
 In the graph for Portugal, we can see that the Gini in several of the regions has been declining over the past 20 years. That is to say, the differences between rich and poor have narrowed over the years. PT18 stands out somewhat in that there are strong fluctuations over the years.
 
 In Portugal, the Gini coefficient are between 0 and 0,08. Portugal has four regions, Algarve (PT15) Lisboa(PT17), Regiäo Autònoma dos Acores (PT20) and Regiäo Autònoma da Madeira (PT30). Regiäo Autònoma dos Acores and Regiäo Autònoma da Madeira are both archipelagos belonging to Portugal which may be the reason why they are outliers. Portugal doesn't have many NUTS 2 regions, and when four of them have no value, there is not much confidence in the result we get.
@@ -551,24 +283,7 @@ filter(Year == 2010)
 The gini value goes from 0 to 1. Where 0 is a perfect equality and 1 is inequality.
 When the gini is 0, it is likely to believe there is missing som data for 2010. Further we will use filter to take away the gini´s who are zero. 
 
-```{r}
-#| echo = FALSE
-gdppop2010 <- gdppop2010 %>%
-  filter(Gini > 0)
-Denmark2010 <- gdppop2010 %>%
-  filter(nuts0=="DK") 
-France2010 <- gdppop2010 %>%
-  filter(nuts0=="FR")
-HungarySlovakia2010 <- gdppop2010 %>%
- filter(grepl('HU..', nuts2) | grepl('SK..', nuts2))
-Portugal2010 <- gdppop2010 %>%
-  filter(nuts0=="PT")
-ggplot()+
-  geom_point(data = gdppop2010, mapping = aes(x = Gini , y = nuts0))+
-  labs(title = "Gini for all countries 2010")
 
-#for alle land i 2010
-```
 
 In this ggplot, we can see how the Gini is distributed per country.
 We can see that France has a point that stands out from the others, while the other countries have most of their points between 0 and 0.1. We have to be observant about that the countries Denmark, Hungary, Portugal and Slovakia don't have so many observations after we divided the countries into Nuts2 levels, that´s why we choose to only look at France by itself and all the countries together when we move forward in the assignment. 
@@ -618,14 +333,7 @@ $$ Regional inequality_i = \beta_1 + \beta_2Regional development_i+u_i$$
 This equation tells us what the regional inequality will be when the regional development is = 0 The slope of the curve will show us how much inequality will change for each increase in development.
 If we increase regional development by 1, regional inequality will increase by 1.
 
-```{r}
-#| echo = FALSE
-ggplot(gdppop2010, aes(x = gdp_per_capita, y = Gini)) +
-  geom_point (lwd=.8) +
-  geom_smooth(method = "lm") + 
-  labs(x = "GDP per capita 2010", Y = "Gini")+
-  labs(title = "Gini and GDP per capita in 2010 for all countries")
-```
+
 
 In this ggplot we look at the relationship between Gini and GDP per capita in 2010 for all countries. We see in the graph that we have points that are above and below the regression line. There are two points on the right that stand out significantly.
 
@@ -654,8 +362,9 @@ lm.5 = lm(Gini2 ~ gdp_per_capita, data = gdppop2010)
   huxreg(
   list("Denmark" = lm.1, "France" = lm.2, "Hungary_Slovakia" = lm.3, "Portugal" = lm.4, "Total" = lm.5),
   statistics = c(N = "nobs", R2 = "r.squared"),
-  coefs = c(gdp_per_capita = "gdp_per_capita", const. = "(Intercept)"),
-  note = "Note: {stars} T statistics in brackets."
+  coefs = c(Const. = "(Intercept)", gdp_per_capita = "gdp_per_capita"),
+  stars = c("*" = 0.1, "**" = 0.05, "***" =0.01),
+  note = "Note): {stars} T statistics in brackets."
   )
 ```
 
@@ -706,21 +415,7 @@ As we said earlier we are now only looking at France because it has 21 observati
 
 ### Discuss the classical assumptions OLS in light of your data and plots
 
-```{r}
-#| echo = FALSE
-ols = lm_function_plot(gdppop2010)
-par(mfrow = c(2,2))
-plot(ols) +
-  labs(title = "OLS for all countries")
-```
 
-```{r}
-#| echo = FALSE
-olsfr = lm_function_plot(France2010)
-par(mfrow = c(2,2))
-plot(olsfr) + 
-  labs(title = "OLS for France")
-```
 
 For linear regression there are seven OLS assumptions that are classical. To produce the the best estimates we usually use the first six assumptions.
 
@@ -763,7 +458,8 @@ lm.13 = lm(Gini2 ~ gdp_per_capita +Road + lea + Edu, mlrdata)
   huxreg(
   list("Model 1" = lm.7, "Model 2" = lm.8, "Model 3" = lm.9,"Model 4" = lm.10,"Model 5" = lm.11, "Model 6" = lm.12, "Model 7" = lm.13),
   statistics = c(N = "nobs", R2 = "r.squared"),
-  coefs = c(gdp_per_capita= "gdp_per_capita", Education = "Edu", Motorway = "Road", Lifeexp = "lea", const. = "(Intercept)"),
+  coefs = c(Const. = "(Intercept)", gdp_per_capita= "gdp_per_capita", Education = "Edu", Motorway = "Road", Lifeexp = "lea"),
+  stars = c("*" = 0.1, "**" = 0.05, "***" =0.01),
   note = "Note: {stars} T statistics in brackets."
   )
 
@@ -798,17 +494,18 @@ lm(Gini ~ Road, data = France2010) %>% tidy()%>% kable(., digits=4)
 
 # Assignment 3 
 
+
+
+
+# Extra 
+
 info 
 
 A slope coeffisient tells us the expected change in Yi when Xi increases by one 
 
-```{r normal q-q plot
-qqnorm(ols)
-qqline(ols)
 
-ols won´t work
-``
-When we look at the normal Q-Q plot it doesn´t appear to show normal values. 
+
+ 
 
 (https://www.datasciencecentral.com/7-classical-assumptions-of-ordinary-least-squares-ols-linear/)
 
@@ -840,7 +537,382 @@ coefficients(reg,vcov=hccm )
 
 #### Appendix
 
+**Assignment 1**
+
+#### Table 1 {data-link="Table 1"}
+
+```{r}
+#| echo = FALSE
+gdppop %>%
+    filter(Year==2010) %>%
+  vtable::st()
+```
+
+#### Table 2 {data-link="Table 2"}
+
+```{r}
+#| echo = FALSE
+gdppop %>%
+   filter(Year==2010) %>%
+  group_by(Year, Region) %>%
+mutate(gdp_per_capita1 = sum(gdp_per_capita))%>%
+ungroup() %>%
+
+summarise( GDP_per_Capita = mean(gdp_per_capita))
+```
+
+#### Figure 1 {data-link="Figure 1"}
+
+```{r GDP in Denmark}
+#| echo = FALSE
+gdppop%>%
+     filter(grepl("DK...", Region)) %>%
+     select(Year, gdp_per_capita, Region) %>%
+     ggplot(aes(x = Year, y= gdp_per_capita, fill= Region, color= Region)) +
+     geom_point(lwd = .8) +
+   labs(title = 'GDP per capita in Denmark', x = "Year", y = "GDP Per capita") 
+```
+
+```{r the whealtiest regions in Denmark}
+#| echo = FALSE
+gdpdk <- gdppop%>%
+  filter(grepl("DK...", Region)) %>%
+  filter(Year==2010) %>%
+  select(Year, Region, gdp_per_capita)
+slice_max(gdpdk, gdp_per_capita, n=3)
+```
+
+```{r The poorest regions in Denmark}
+#| echo = FALSE
+slice_min(gdpdk, gdp_per_capita, n=3)
+
+```
+
+```{r}
+#| echo = FALSE
+gdpdk %>%
+summary()
+```
+
+#### Figure 2 {data-link="Figure 2"}
+
+```{r GDP in France}
+#| echo = FALSE
+gdppop%>%
+     filter(grepl("FR...", Region)) %>%
+     select(Year, gdp_per_capita, Region) %>%
+     ggplot(aes(x = Year, y= gdp_per_capita, fill= Region, color= Region)) +
+     geom_point(lwd = .8) +
+   labs(title = 'GDP per capita in France', x = "Year", y = "GDP Per capita")
+```
+
+```{r}
+#| echo = FALSE
+gdppop%>%
+  filter(grepl("FR...", Region)) %>%
+  select(Population, gdp_per_capita) %>%
+  summary()
+```
+
+```{r Take away the FRY regions}
+#| echo = FALSE
+gdppop <- gdppop %>%
+  filter(Region != 'FRY10') %>%
+   filter(Region != 'FRY20') %>%
+   filter(Region != 'FRY30') %>%
+   filter(Region != 'FRY40') %>%
+   filter(Region != 'FRY50') 
+```
+
+```{r France without the FRY regions}
+#| echo = FALSE
+gdppop%>%
+     filter(grepl("FR...", Region)) %>%
+     select(Year, gdp_per_capita, Region) %>%
+     ggplot(aes(x = Year, y= gdp_per_capita, fill= Region, color= Region)) +
+     geom_point(lwd = .8) +
+   labs(title = 'GDP per capita in France', x = "Year", y = "GDP Per capita")
+```
+
+```{r The whealtiest regions in France}
+#| echo = FALSE
+gdpfr <- gdppop %>%
+  filter(grepl("FR...", Region)) %>%
+  filter(Year==2010) %>%
+  select(Year, Region, gdp_per_capita)
+slice_max(gdpfr, gdp_per_capita, n=3)
+```
+
+```{r The poorest regions in France}
+#| echo = FALSE
+slice_min(gdpfr, gdp_per_capita, n=3)
+```
+
+```{r}
+#| echo = FALSE
+summary(gdpfr)
+```
+
+#### Figure 3 {data-link="Figure 3"}
+
+```{r GDP in Hungary and Slovakia}
+#| echo = FALSE
+gdppop %>%
+     filter (grepl('HU..', Region) | grepl('SK..', Region)) %>%
+     select(Year, gdp_per_capita, Region) %>%
+     ggplot(aes(x = Year, y= gdp_per_capita, fill= Region, color= Region)) +
+     geom_point(lwd = .8) +
+   labs(title = 'GDP per capita in Hungary and Slovakia ', x = "Year", y = "GDP Per capita")
+```
+
+```{r The whealtiest regions in Hungary and Slovakia}
+#| echo = FALSE
+gdphusk <- gdppop%>%
+  filter(grepl('HU..', Region) | grepl('SK..', Region)) %>%
+  filter(Year==2010) %>%
+  select(Year, Region, gdp_per_capita) 
+slice_max(gdphusk, gdp_per_capita, n=3)
+```
+  
+
+```{r The poorest regions in Hungary and Slovakia}
+#| echo = FALSE
+slice_min(gdphusk, gdp_per_capita, n=3)
+```
+
+```{r}
+#| echo = FALSE
+gdphusk %>%
+summary()
+```
+
+#### Figure 4 {data-link="Figure 4"}
+
+```{r GDP in Portugal}
+#| echo = FALSE
+gdppop%>%
+     filter(grepl("PT...", Region)) %>%
+     select(Year, gdp_per_capita, Region) %>%
+     ggplot(aes(x = Year, y= gdp_per_capita, fill= Region, color= Region)) +
+     geom_point(lwd = .8) +
+   labs(title = 'GDP per capita in Portugal', x = "Year", y = "GDP Per capita") 
+```
+
+```{r the whealtiest regions in Portugal}
+#| echo = FALSE
+gdppt <- gdppop%>%
+  filter(grepl("PT...", Region)) %>%
+  filter(Year==2010) %>%
+  select(Region, gdp_per_capita)
+slice_max(gdppt, gdp_per_capita, n=3)
+```
+The poorest regions in Portugal
+```{r The poorest regions in Portugal}
+#| echo = FALSE
+slice_min(gdppt, gdp_per_capita, n=3)
+```
+
+```{r}
+#| echo = FALSE
+gdppt %>%
+summary()
+```
+
+#### Figure 5 {data-link="Figure 5"}
+
+```{r NUTS2 in Denmark}
+#| echo = FALSE
+gdppop %>%
+filter(nuts0 == "DK") %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
+  geom_line(lwd = .8) +
+   labs(title = 'Nuts 2 - Gini in Denmark', x = "Year", y = "Gini")
+```
+
+```{r}
+#| echo = FALSE
+gdppop %>%
+filter(nuts0 == "DK") %>%
+select(Year,nuts2, gini_n2) %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+  filter(Year==2010)
+```
+Outliers in Denmark
+```{r Outliers in Denmark}
+#| echo = FALSE
+dkoutliers <- gdppop %>%
+  filter(nuts0 == "DK") %>%
+  filter(gini_n2==0) %>%
+  distinct(nuts2)
+dkoutliers
+```
+
+#### Figure 6 {data-link="Figure 6"}
+
+```{r NUTS2 in France}
+#| echo = FALSE
+gdppop %>%
+filter(nuts0 == "FR") %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
+  geom_line(lwd = .8) +
+   labs(title = 'Nuts 2 - Gini in France', x = "Year", y = "Gini") 
+
+```
+
+```{r}
+#| echo = FALSE
+gdppop %>%
+filter(nuts0 == "FR") %>%
+select(Year,nuts2, gini_n2) %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+  filter(Year==2010)
+```
+
+Outliers in France
+```{r Outliers in France}
+#| echo = FALSE
+froutliers <- gdppop %>%
+  filter(nuts0 == "FR") %>%
+  filter(gini_n2==0) %>%
+  distinct(nuts2)
+froutliers
+```
+
+#### Figure 7 {data-link="Figure 7"}
+
+```{r NUTS2 in Hungary and Slovakia}
+#| echo = FALSE
+gdppop %>%
+filter(grepl('HU..', Region) | grepl('SK..', Region)) %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
+  geom_line(lwd = .8) +
+   labs(title = 'Nuts 2 - Gini in Hungary and Slovakia', x = "Year", y = "Gini")
+
+```
+
+```{r}
+#| echo = FALSE
+gdppop %>%
+filter(nuts0 == "HU") %>%
+select(Year,nuts2, gini_n2) %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+  filter(Year==2010)
+```
+
+```{r}
+#| echo = FALSE
+gdppop %>%
+filter(nuts0 == "SK") %>%
+select(Year,nuts2, gini_n2) %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+  filter(Year==2010)
+```
+
+```{r Outliers in Hungary and Slovakia}
+#| echo = FALSE
+huskoutliers <- gdppop %>%
+   filter (grepl('HU..', Region) | grepl('SK..', Region)) %>%
+  filter(gini_n2==0) %>%
+  distinct(nuts2)
+huskoutliers
+```
+
+#### Figure 8 {data-link="Figure 8"}
+
+```{r NUTS2 in Portugal}
+#| echo = FALSE
+gdppop %>%
+filter(nuts0 == "PT") %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+ggplot(aes(x = Year, y=gini_n2, fill=nuts2, color=nuts2)) +
+  geom_line(lwd = .8) +
+   labs(title = 'Nuts 2 - Gini in Portugal', x = "Year", y = "Gini")
+
+```
+
+```{r}
+#| echo = FALSE
+gdppop %>%
+filter(nuts0 == "PT") %>%
+select(Year,nuts2, gini_n2) %>%
+distinct(nuts2, Year,.keep_all =TRUE) %>%
+  filter(Year==2010)
+```
+Outliers in Portugal
+```{r Outliers in Portugal}
+#| echo = FALSE
+ptoutliers <- gdppop %>%
+  filter(nuts0 == "PT") %>%
+  filter(gini_n2==0) %>%
+  distinct(nuts2)
+ptoutliers
+```
+
 **Assignment 2**
+
+#### Figure 9 {data-link="Figure 9"}
+
+```{r}
+#| echo = FALSE
+gdppop2010 <- gdppop2010 %>%
+  filter(Gini > 0)
+Denmark2010 <- gdppop2010 %>%
+  filter(nuts0=="DK") 
+France2010 <- gdppop2010 %>%
+  filter(nuts0=="FR")
+HungarySlovakia2010 <- gdppop2010 %>%
+ filter(grepl('HU..', nuts2) | grepl('SK..', nuts2))
+Portugal2010 <- gdppop2010 %>%
+  filter(nuts0=="PT")
+ggplot()+
+  geom_point(data = gdppop2010, mapping = aes(x = Gini , y = nuts0))+
+  labs(title = "Gini for all countries 2010")
+
+#for alle land i 2010
+```
+
+#### Figure 10 {data-link="Figure 10"}
+
+Estimate the effect of regional development on regional inequality GINI for the year 2010
+
+```{r}
+#| echo = FALSE
+ggplot(gdppop2010, aes(x = gdp_per_capita, y = Gini)) +
+  geom_point (lwd=.8) +
+  geom_smooth(method = "lm") + 
+  labs(x = "GDP per capita 2010", Y = "Gini")+
+  labs(title = "Gini and GDP per capita in 2010 for all countries")
+```
+
+#### Figure 11 {data-link="Figure 11"}
+
+Discuss the classical assumptions OLS in light of your data and plots
+
+```{r}
+#| echo = FALSE
+ols = lm_function_plot(gdppop2010)
+par(mfrow = c(2,2))
+plot(ols) +
+  labs(title = "OLS for all countries")
+```
+
+```{r}
+#| echo = FALSE
+olsfr = lm_function_plot(France2010)
+par(mfrow = c(2,2))
+plot(olsfr) + 
+  labs(title = "OLS for France")
+```
+
+#### Figure 12 {data-link="Figure 12"}
+
+#### Figure 13 {data-link="Figure 13"}
+
+#### Figure 14 {data-link="Figure 14"}
+
 
 Plots the residuals against the predicted values of our model
 
